# rigid-faces

./: CMakeLists.txt  LKInverseComp.cpp  LKInverseCompClass.cpp  LKInverseCompClass.h  LKInverseCompRobustClass.cpp  LKInverseCompRobustClass.h  LKMouseMoveLinux.cpp  README.md  opencvWebcam.cpp  opencvWebcam.h
AAM/: CMakeLists.txt  ram.c
AAM/include/: aamTrainer.h  canvas.h  cmupca.h  delaunay.h  landmarkpoint.h  lkFitting.h  opencvWebcam.h  pca.h  qtUtils.h
AAM/src/: canvas.cpp  cmupca.cpp  delaunay.cpp  landmarkpoint.cpp  lkFitting.cpp  main.cpp  opencvWebcam.cpp  pca.cpp  qtUtils.cpp  runner.cpp
aam/data/: aamTrainer.ui
include/: aam.h  aamTrainer.h  canvas.h  cmupca.h  delaunay.h  landmarkpoint.h  lkFitting.h  lkFittingSM.h  opencvWebcam.h  pca.h  pca_shape.h  qtUtils.h
lktracking/: LKInverseComp.cpp  LKInverseCompClass.cpp  LKInverseCompClass.h  LKMouseMoveLinux.cpp  opencvWebcam.cpp
src/: canvas.cpp  cmupca.cpp  delaunay.cpp  landmarkpoint.cpp  lkFitting.cpp  lkFittingSM.cpp  main.cpp  opencvWebcam.cpp  pca.cpp  pca_aam.cpp  pca_shape.cpp  qtUtils.cpp  runner.cpp
